--- a/TravellingSalesmanProblem.csproj
+++ b/TravellingSalesmanProblem.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GeneticAlgorithm.cs" />
+    <Compile Include="Individual.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
